--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Get version from npm and increment
         run: |
+          set -x
           yarn global add semver
           PATH="$(yarn global bin):$PATH"
           LOCAL_VERSION="$(cat package.json | jq .version)"
