--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -26,7 +26,7 @@ jobs:
           set -x
           yarn global add semver
           PATH="$(yarn global bin):$PATH"
-          LOCAL_VERSION="$(cat package.json | jq .version)"
+          LOCAL_VERSION="$(cat package.json | jq -r .version)"
           PKG_NAME="$(cat package.json | jq .name)"
           NPM_VERSION="$(yarn info --silent "$PKG_NAME" version || true)"
           MAX_VERSION="$(semver "$LOCAL_VERSION" "$NPM_VERSION" "0.0.0" | tail -n1)"
