--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -65,6 +65,6 @@ jobs:
           tag_name: ${{ env.FINAL_VERSION }}
           release_name: Fluence Network ${{ env.FINAL_VERSION }}
           body: |
-            https://www.npmjs.com/package/@fluencelabs/fluence-network-environment/v/${{ env.FINAL_VERSION }}
-          draft: true
-#          prerelease: false
+            [${{ env.FINAL_VERSION }} @ NPM registry](https://www.npmjs.com/package/@fluencelabs/fluence-network-environment/v/${{ env.FINAL_VERSION }})
+          draft: false
+          prerelease: false
